fix market news on tablet

--- a/styles/phone-default.css
+++ b/styles/phone-default.css
@@ -331,7 +331,18 @@ article div h3 {
     color: #425363;
     background-color: #C9C8C7;
     margin-bottom: 1em;
+    height: 0;
+    padding-bottom: 10.5%;
+    transition: 0.3s;
 }
+.market-news.open {
+    color: #425363;
+    background-color: #C9C8C7;
+    margin-bottom: 1em;
+    height: 0;
+    padding-bottom: 47.5%;
+}
+
 .market-news:last-of-type {
     margin-bottom: 0;
 }
@@ -346,7 +357,7 @@ article div h3 {
 }
 
 .market-news.open .tile-element-links {
-    height: 130px;
+    height: 110px;
     padding-bottom: 0;
 }
 
